# data-analysis-with-pandas

./: README.md  bike-stats.ipynb  pyproject.toml  vg-stats.ipynb
.ipynb_checkpoints/: bike-stats-checkpoint.ipynb  vg-stats-checkpoint.ipynb
